# Fault-of-Our-Stars---Behavioral-Drivers-of-Rating-Sentiment-Incongruence

./: .gitignore  README.md  Tourism Analysis 3.ipynb  pyproject.toml
Paper/: conference_paper_ieee.bbl  conference_paper_ieee.blg  conference_paper_ieee.tex  conference_paper_ieee_highlighted.bbl  conference_paper_ieee_highlighted.blg  conference_paper_ieee_highlighted.tex
notebooks/: 01_dataset_preparation.ipynb  02_model_feature_generation.ipynb  03_analysis.ipynb  04_model_validation.ipynb
paper/: conference_paper_ieee.tex  conference_paper_ieee_highlighted.tex  references.bib
scripts/: plot_incongruence_patterns.py  plot_reviewer_expertise_patterns.py  plot_venue_incongruence_rate.py  run_final_framework.py
src/tourism_review_analysis/: __init__.py  pipeline.py
